[metadata]
author = David Bentley
author_email = orestes13@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
description = A Python package for creating meshes of complex shapes
download_url = https://github.com/orestes13/OneFineMesh
keywords =
    meshing
    triangulation
license = BSD 3-Clause Licensez
long_description = file: README.md
long_description_content_type = text/markdown
name = onefinemesh
project_urls =
    Code = https://github.com/orestes13/OneFineMesh
    Issues = https://github.com/orestes13/OneFineMesh/issues
url = https://github.com/orestes13/OneFineMesh
version = attr: onefinemesh.__version__

[options]
include_package_data = True
install_requires =
    matplotlib
    numpy
    shapely
packages = find:
python_requires =
    >=3.8
zip_safe = False

[options.extras_require]
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    sphinxcontrib-napoleon
    sphinxcontrib-bibtex
test =
    pytest
